k8s/pgadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin-deployment
  labels:
    app: manage-contacts

spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: pgadmin-manage-contacts
    spec:
      containers:
        - name: pgadmin-manage-contacts
          image: dpage/pgadmin4
  selector:
    matchLabels:
      app: pgadmin-manage-contacts

---

apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  labels:
    app: pgadmin

spec:
  selector:
    app: pgadmin-manage-contacts
  type: NodePort
  # type: LoadBalancer 
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30491
